--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-less-watcher": "^1.1.4",
     "react-scripts": "2.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "watch-less": "react-less-watcher -d src",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-less start-js",
+    "build": "npm run watch-less && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
