--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.0",
+    "@material-ui/icons": "^3.0.2",
+    "draggabilly": "^2.2.0",
     "less-watch-compiler": "^1.13.0",
     "localforage": "^1.7.3",
     "npm-run-all": "^4.1.5",
+    "packery": "^2.1.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-less-watcher": "^1.1.4",
